--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,7 +1,7 @@
 :root {
   /* ------- Fonts ------- */
   --font-primary: 'Shippori+Mincho', serif;
-  --font-title-en: 'trajan-pro-3', serif;
+  --font-title-en: 'trajan-pro-3', 'Cinzel', serif;
   --color-background: #ffffff;
   --header-gradation: linear-gradient(90deg, rgba(168, 129, 91, 1) 00%, rgba(246, 226, 207, 1) 100%);
   --color-primary: #a8815b;
