--- a/scss/pages/_front-page.scss
+++ b/scss/pages/_front-page.scss
@@ -169,6 +169,7 @@
     font-family: var(--font-title-en);
     font-weight: 300;
     font-size: 2rem;
+    letter-spacing: 0.1em;
     text-transform: capitalize;
   }
 
