--- a/scss/pages/_header.scss
+++ b/scss/pages/_header.scss
@@ -37,10 +37,16 @@
   }
 
   // ナビゲーションメニューのスタイリング
-  &__gnav {
+  &__nav-container {
     display: grid;
     grid-template-columns: repeat(2, auto);
     gap: 3rem;
+    align-items: center;
+  }
+  &__gnav {
+    // display: grid;
+    // grid-template-columns: repeat(2, auto);
+    // gap: 3rem;
 
     ul {
       list-style: none;
@@ -69,12 +75,14 @@
   &__sns {
     display: grid;
     align-items: center;
-    grid-template-columns: 1fr;
-    gap: 4rem;
+    grid-template-columns: auto; /* アイコンの幅に合わせる */
+    // gap: 4rem;
     justify-self: flex-end;
-
+    img {
+      display: none;
+    }
     a {
-      width: 2rem;
+      width: 32px;
       height: auto;
       display: inline flex;
     }
@@ -140,15 +148,22 @@
 
   .site-header {
     &__nav-container {
-      display: flex;
-      align-items: center;
-      padding: 2.5rem;
+      display: grid;
+      grid-template-columns: 1fr;
+      grid-template-rows: repeat(2, auto);
+      row-gap: 0;
+      // display: flex;
+      // align-items: center;
+      // justify-content: center;
     }
 
     &__gnav {
+      grid-column: 1;
+      grid-row: 1;
       grid-template-columns: 1fr; // gridを1columnに指定
-      gap: 3.5rem; // 56px
+      // gap: 3.5rem; // 56px
       align-items: center;
+      text-align: center;
 
       ul {
         grid-template-columns: 1fr;
@@ -165,8 +180,25 @@
 
     // SNSアイコンのスタイリング
     &__sns {
+      grid-column: 1;
+      grid-row: 2;
+      grid-template-columns: minmax(1rem, 1fr) minmax(auto, 280px) minmax(1.5rem, 1fr);
       gap: 3.5rem;
       justify-self: flex-start;
+
+      img {
+        grid-column: 2;
+        grid-row: 1;
+        display: block;
+      }
+
+      a {
+        grid-column: 2;
+        grid-row: 2;
+        svg {
+          stroke: #fff;
+        }
+      }
     }
   }
 
@@ -197,7 +229,7 @@
     height: 80px;
   }
   .site-nav {
-    width: 50%;
+    width: 100%;
     height: 100vh;
   }
 }
