--- a/scss/pages/_index.scss
+++ b/scss/pages/_index.scss
@@ -1,5 +1,6 @@
 @forward './header';
 @forward './front-page';
 @forward './page-about';
+@forward './page-portfolio';
 @forward './page-plan';
 @forward './footer';
