--- a/scss/pages/_front-page.scss
+++ b/scss/pages/_front-page.scss
@@ -4,6 +4,9 @@
   grid-column: 1 / -1;
   width: 100%;
   height: auto;
+  @include mq {
+    margin-top: 80px;
+  }
 }
 
 .main-content {
@@ -14,7 +17,7 @@
 .news {
   display: grid;
   grid-template-columns: 1fr;
-  align-self: center;
+  row-gap: clamp(1rem, 0.273rem + 3.64vw, 3rem);
 
   &__title {
     grid-row: 1;
@@ -22,8 +25,13 @@
   &__article {
     grid-row: 2;
     display: grid;
-    grid-template-columns: repeat(3, 1fr); /* 3つの等幅の列 */
-    gap: 20px; /* 列と行の間の間隔 */
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+
+    @include mq {
+      grid-template-columns: 1fr;
+      row-gap: 20px;
+    }
   }
 
   &__article-card {
@@ -50,7 +58,6 @@
   &__button {
     grid-row: 3;
     justify-self: center;
-    margin-top: 4rem;
     width: 200px;
   }
 }
@@ -58,6 +65,7 @@
 .about {
   display: grid;
   grid-template-columns: 1fr;
+  row-gap: clamp(1rem, 0.636rem + 1.82vw, 2rem);
 
   &__title {
     grid-row: 1;
@@ -71,12 +79,12 @@
   &__introduction {
     grid-row: 3;
     justify-self: center;
-
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: auto;
     row-gap: 0.25rem;
   }
+
   &__role,
   &__name,
   &__english-name,
@@ -106,11 +114,18 @@
     font-weight: 300;
     letter-spacing: 0.1em;
   }
+
+  &__button {
+    grid-row: 4;
+    justify-self: center;
+    width: 200px;
+  }
 }
 
 .portfolio {
   display: grid;
   grid-template-columns: 1fr;
+  row-gap: clamp(1rem, 0.273rem + 3.64vw, 3rem);
 
   &__title {
     grid-row: 1;
@@ -145,7 +160,7 @@
     grid-row: 2;
   }
 
-  &__evenr {
+  &__event {
     grid-column: 2;
     grid-row: 2;
   }
@@ -153,6 +168,37 @@
   &__profile {
     grid-column: 3;
     grid-row: 2;
+  }
+  @include mq {
+    &__container {
+      grid-template-columns: repeat(2, auto);
+      grid-template-rows: repeat(3, auto);
+    }
+
+    &__wedding {
+      grid-column: 2;
+      grid-row: 1;
+    }
+
+    &__maternity {
+      grid-column: 1;
+      grid-row: 2;
+    }
+
+    &__newborn {
+      grid-column: 2;
+      grid-row: 2;
+    }
+
+    &__event {
+      grid-column: 1;
+      grid-row: 3;
+    }
+
+    &__profile {
+      grid-column: 2;
+      grid-row: 3;
+    }
   }
 }
 
@@ -168,7 +214,7 @@
     transform: translate(-50%, -50%);
     font-family: var(--font-title-en);
     font-weight: 300;
-    font-size: 2rem;
+    font-size: clamp(0.8rem, 0.364rem + 2.18vw, 2rem);
     letter-spacing: 0.1em;
     text-transform: capitalize;
   }
@@ -179,10 +225,17 @@
   }
 }
 
+.plan-contact {
+  display: grid;
+  grid-template-columns: 1fr;
+  row-gap: clamp(6.25rem, 3.977rem + 11.36vw, 12.5rem);
+}
+
 .plan {
   display: grid;
   grid-template-columns: 1fr;
   align-self: center;
+  row-gap: clamp(1rem, 0.273rem + 3.64vw, 3rem);
 
   &__desc {
     justify-self: center;
@@ -192,25 +245,23 @@
   &__button {
     grid-row: 3;
     justify-self: center;
-    margin-top: 4rem;
-    width: 624px;
+    width: clamp(12.5rem, 3.409rem + 45.45vw, 37.5rem);
   }
 }
 
 .contact {
   display: grid;
   grid-template-columns: 1fr;
+  row-gap: clamp(0.5rem, 0.245rem + 1.27vw, 1.2rem);
   align-self: center;
 
   &__text {
-    padding-top: 240px;
     justify-self: center;
     align-self: center;
   }
+
   &__button {
-    grid-row: 3;
     justify-self: center;
-    margin-top: 4rem;
-    width: 624px;
+    width: clamp(12.5rem, 3.409rem + 45.45vw, 37.5rem);
   }
 }
