--- a/scss/pages/_header.scss
+++ b/scss/pages/_header.scss
@@ -12,8 +12,8 @@
 
   display: grid;
   grid-template-columns: minmax(1rem, 1fr) minmax(auto, 1168px) minmax(1.5rem, 1fr);
-  justify-content: center;
-  align-items: center;
+  // justify-content: center;
+  // align-items: center;
 
   &__container {
     grid-column: 2;
@@ -25,14 +25,12 @@
   }
 
   &__logo {
-    width: auto;
-    height: 100%;
     display: flex;
     align-items: center;
 
     img {
       width: auto;
-      max-height: 73px;
+      max-height: clamp(4rem, 3.795rem + 1.02vw, 4.563rem);
     }
   }
 
