--- a/scss/pages/_page-about.scss
+++ b/scss/pages/_page-about.scss
@@ -14,7 +14,7 @@
     grid-column: 1 / -1;
   }
   &__photo {
-    padding-top: clamp(3rem, -7.195rem + 42.93vw, 25rem);
+    padding-top: clamp(3rem, 1.545rem + 7.27vw, 7rem);
     grid-column: 2;
     align-self: center;
     justify-self: center;
@@ -35,21 +35,8 @@
   &__profile {
     grid-row: 1;
     display: grid;
-    grid-template-columns: 1fr;
-    gap: 0.1em;
-  }
-
-  &__role,
-  &__english-name {
-    font-size: clamp(0.75rem, 0.402rem + 1.46vw, 1.5rem);
-  }
-
-  &__name {
-    font-size: clamp(1.125rem, 0.488rem + 2.68vw, 2.5rem);
-  }
-  &__desc {
-    grid-row: 2;
-    font-size: clamp(0.75rem, 0.055rem + 2.93vw, 2.25rem);
+    grid-template-columns: auto 1fr;
+    gap: 0 2rem;
   }
 
   &__role,
@@ -59,7 +46,33 @@
     font-family: var(--font-primary);
     color: var(--color-primary);
     font-weight: 200;
+    letter-spacing: 0.2em;
+  }
+
+  &__role {
+    grid-column: 1;
+    grid-row: 1;
+    font-size: clamp(0.75rem, 0.402rem + 1.46vw, 1.5rem);
     letter-spacing: 0.1em;
+  }
+
+  &__english-name {
+    grid-column: 2;
+    grid-row: 2;
+    font-size: clamp(0.75rem, 0.586rem + 0.82vw, 1.2rem);
+    align-self: self-end;
+  }
+
+  &__name {
+    grid-column: 1;
+    grid-row: 2;
+    font-size: clamp(1.125rem, 0.488rem + 2.68vw, 2.5rem);
+    align-self: self-end;
+  }
+
+  &__desc {
+    grid-row: 2;
+    font-size: clamp(0.75rem, 0.514rem + 1.18vw, 1.4rem);
   }
 }
 
@@ -70,7 +83,7 @@
   grid-template-columns: minmax(2rem, 1fr) minmax(auto, 980px) minmax(2rem, 1fr);
   align-self: center;
   justify-self: center;
-  row-gap: clamp(3rem, -7.195rem + 42.93vw, 25rem);
+  row-gap: clamp(3rem, 1.545rem + 7.27vw, 7rem);
 
   &__header {
     grid-column: 1/ -1;
@@ -95,7 +108,7 @@
   }
 
   &__text {
-    font-size: clamp(0.75rem, 0.055rem + 2.93vw, 2.25rem);
+    font-size: clamp(0.75rem, 0.514rem + 1.18vw, 1.4rem);
     font-family: var(--font-primary);
     letter-spacing: 0.1em;
     text-align: center;
