--- a/scss/pages/_page-plan.scss
+++ b/scss/pages/_page-plan.scss
@@ -3,49 +3,127 @@
 .plan {
   &__header {
     grid-column: 1 / -1;
+    margin-top: 120px;
+  }
+
+  &__section {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: auto;
+    gap: 1rem;
+  }
+
+  &__content {
+    grid-column: 2;
+    width: 100%;
+    margin-top: clamp(4rem, 1.091rem + 14.55vw, 12rem);
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    align-self: center;
+    justify-self: center;
+    gap: clamp(4rem, 1.091rem + 14.55vw, 12rem) clamp(0rem, -0.727rem + 3.64vw, 2rem);
+    // row-gap: clamp(4rem, 1.091rem + 14.55vw, 12rem);
+    // column-gap: clamp(0rem, -0.727rem + 3.64vw, 2rem);
   }
 
   &__container {
-    grid-column: 2;
+    height: clamp(15rem, 9.545rem + 27.27vw, 30rem);
+    position: relative;
+    display: flex;
+    justify-content: center;
+  }
+
+  &__wrapper {
+    width: clamp(9.375rem, 8.239rem + 5.68vw, 12.5rem);
+    height: clamp(8.75rem, 7.545rem + 6.02vw, 12.063rem);
+
+    border: 1px solid var(--color-primary);
+    border-radius: 50%;
+    position: relative;
+    display: flex;
+    justify-content: center;
   }
 
   &__title-area {
-    width: 100%;
-    height: clamp(6rem, 30vw, 22.5rem);
-    background: var(--header-gradation);
+    position: absolute;
+    top: 28%;
     display: grid;
     grid-template-columns: 1fr;
-    gap: clamp(1rem, 0.636rem + 1.82vw, 2rem);
+    gap: 0;
+    height: auto;
   }
 
-  &__title {
-    grid-column: 1;
-    grid-row: 1;
-    justify-self: start;
-    font-family: var(--font-title-en);
+  &__cat {
+    font-family: var(--font-primary);
     font-weight: 300;
-    letter-spacing: 0.1em;
-    font-size: clamp(1.5rem, 0.591rem + 4.55vw, 4rem);
+    letter-spacing: 0.05em;
+    font-size: clamp(1rem, 0.636rem + 1.82vw, 2rem);
     text-transform: capitalize;
-    color: #fff;
+    line-height: 1;
+    justify-self: center;
+  }
+
+  &__jp {
+    font-family: var(--font-primary);
+    font-size: clamp(0.75rem, 0.705rem + 0.23vw, 0.875rem);
+    letter-spacing: 0.1em;
+    color: var(--color-primary);
+    justify-self: center;
+  }
+
+  &__photo {
+    position: absolute;
+    width: 100%;
+    aspect-ratio: 1 / 1;
+    object-fit: cover;
+    object-position: center;
+    transform: translateY(43%);
+  }
+
+  &__introduction {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr auto auto;
+    gap: 1rem;
+    padding: 0 clamp(1rem, 0.636rem + 1.82vw, 2rem);
+  }
+
+  &__desc {
+    font-family: var(--font-primary);
+    font-size: clamp(0.813rem, 0.79rem + 0.11vw, 0.875rem);
+    letter-spacing: 0.1em;
+    line-height: 1.4;
+    color: var(--color-primary);
+
+    justify-self: start;
   }
 
   &__price {
-    grid-column: 1;
-    grid-row: 2;
-    justify-self: end;
     font-family: var(--font-primary);
-    font-weight: 300;
+    font-size: 1.8rem;
+    font-weight: 600;
     letter-spacing: 0.1em;
-    font-size: clamp(1rem, 0.455rem + 2.73vw, 2.5rem);
-    color: #fff;
+    color: var(--color-primary);
+
+    justify-self: center;
   }
 
   &__tax {
     font-family: var(--font-primary);
-    font-weight: 300;
+    font-size: 0.875rem;
+    font-weight: 600;
     letter-spacing: 0.1em;
-    font-size: clamp(0.75rem, 0.477rem + 1.36vw, 1.5rem);
-    color: #fff;
+    color: var(--color-primary);
+  }
+
+  &__point {
+    justify-self: center;
+    > li {
+      font-family: var(--font-primary);
+      font-size: clamp(0.9rem, 0.755rem + 0.73vw, 1.3rem);
+      font-weight: 600;
+      letter-spacing: 0.1em;
+      color: var(--color-primary);
+    }
   }
 }
