--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -780,7 +780,7 @@ main {
 .plan__section {
   display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows: auto;
+  grid-template-rows: auto 1fr;
   gap: 1rem;
 }
 .plan__content {
@@ -791,10 +791,10 @@ main {
   grid-template-columns: repeat(3, 1fr);
   align-self: center;
   justify-self: center;
-  gap: clamp(4rem, 1.091rem + 14.55vw, 12rem) clamp(0rem, -0.727rem + 3.64vw, 2rem);
+  gap: clamp(1.2rem, 0.727rem + 2.36vw, 2.5rem) clamp(0rem, -0.727rem + 3.64vw, 2rem);
 }
 .plan__container {
-  height: clamp(15rem, 9.545rem + 27.27vw, 30rem);
+  height: clamp(18rem, -5.821rem + 47.76vw, 30rem);
   position: relative;
   display: flex;
   justify-content: center;
@@ -834,7 +834,7 @@ main {
 }
 .plan__photo {
   position: absolute;
-  width: 100%;
+  width: 90%;
   aspect-ratio: 1/1;
   object-fit: cover;
   object-position: center;
@@ -879,6 +879,10 @@ main {
   font-weight: 600;
   letter-spacing: 0.1em;
   color: var(--color-primary);
+}
+.plan__option {
+  grid-column: 1/3;
+  grid-row: 2;
 }
 
 /* ------- header ------- */
