--- a/scss/pages/_page-plan.scss
+++ b/scss/pages/_page-plan.scss
@@ -9,7 +9,7 @@
   &__section {
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: auto;
+    grid-template-rows: auto 1fr;
     gap: 1rem;
   }
 
@@ -21,13 +21,13 @@
     grid-template-columns: repeat(3, 1fr);
     align-self: center;
     justify-self: center;
-    gap: clamp(4rem, 1.091rem + 14.55vw, 12rem) clamp(0rem, -0.727rem + 3.64vw, 2rem);
+    gap: clamp(1.2rem, 0.727rem + 2.36vw, 2.5rem) clamp(0rem, -0.727rem + 3.64vw, 2rem);
     // row-gap: clamp(4rem, 1.091rem + 14.55vw, 12rem);
     // column-gap: clamp(0rem, -0.727rem + 3.64vw, 2rem);
   }
 
   &__container {
-    height: clamp(15rem, 9.545rem + 27.27vw, 30rem);
+    height: clamp(18rem, -5.821rem + 47.76vw, 30rem);
     position: relative;
     display: flex;
     justify-content: center;
@@ -73,7 +73,7 @@
 
   &__photo {
     position: absolute;
-    width: 100%;
+    width: 90%;
     aspect-ratio: 1 / 1;
     object-fit: cover;
     object-position: center;
@@ -125,5 +125,10 @@
       letter-spacing: 0.1em;
       color: var(--color-primary);
     }
+  }
+
+  &__option {
+    grid-column: 1 / 3;
+    grid-row: 2;
   }
 }
