--- a/scss/pages/_page-plan.scss
+++ b/scss/pages/_page-plan.scss
@@ -127,8 +127,105 @@
     }
   }
 
-  &__option {
+  &__common {
     grid-column: 1 / 3;
     grid-row: 2;
+    padding: 1rem;
+    border: 1px solid var(--color-primary);
+    border-radius: 1rem;
+    > p,
+    > ul > li {
+      font-family: var(--font-primary);
+      font-size: clamp(0.813rem, 0.79rem + 0.11vw, 0.875rem);
+      letter-spacing: 0.1em;
+      line-height: 1.6;
+      color: var(--color-primary);
+    }
+    p {
+      font-weight: 600;
+    }
   }
+
+  &__option {
+    grid-column: 3;
+    grid-row: 2;
+
+    > h3 {
+      font-family: var(--font-primary);
+      font-size: clamp(0.9rem, 0.755rem + 0.73vw, 1.3rem);
+      font-weight: 600;
+      letter-spacing: 0.1em;
+      color: var(--color-primary);
+      text-transform: capitalize;
+    }
+    &-price {
+      font-family: var(--font-primary);
+      font-size: clamp(0.813rem, 0.79rem + 0.11vw, 0.875rem);
+      letter-spacing: 0.1em;
+      line-height: 1.6;
+      color: var(--color-primary);
+
+      > span {
+        font-size: 0.7rem;
+      }
+    }
+  }
+}
+
+.plan-section-title {
+  height: 100px;
+  width: 100%;
+  background: var(--header-gradation);
+  align-content: center;
+  padding-left: 5%;
+
+  font-family: var(--font-primary);
+  font-size: 1.8rem;
+  font-weight: 600;
+  letter-spacing: 0.1em;
+  color: #fff;
+}
+
+.process {
+  grid-column: 2;
+
+  &__container {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: clamp(1rem, 0.636rem + 1.82vw, 2rem);
+  }
+
+  &__step {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: auto 1fr 0.5fr;
+
+    &-number {
+      font-family: var(--font-primary);
+      font-size: clamp(2rem, 1.273rem + 3.64vw, 4rem);
+      color: var(--color-primary);
+      padding-top: 24px;
+      line-height: 1;
+    }
+
+    &-img {
+      align-self: center;
+      justify-self: center;
+      padding: 1rem;
+      width: auto;
+      height: auto;
+    }
+
+    > p {
+      font-family: var(--font-primary);
+      font-size: clamp(0.813rem, 0.79rem + 0.11vw, 0.875rem);
+      letter-spacing: 0.1em;
+      line-height: 1.6;
+      color: var(--color-primary);
+    }
+  }
+}
+
+.policy {
+  grid-column: 2;
 }
