--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -773,6 +773,46 @@ main {
   align-self: center;
 }
 
+.service {
+  grid-column: 2;
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: clamp(6.25rem, 2.977rem + 16.36vw, 15.25rem);
+}
+.service__title {
+  justify-self: center;
+  padding: clamp(2rem, 1.273rem + 3.64vw, 4rem) 0;
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: clamp(0.5rem, 0.318rem + 0.91vw, 1rem);
+}
+.service__en {
+  font-family: var(--font-primary);
+  font-weight: 300;
+  letter-spacing: 0.2em;
+  font-size: clamp(1rem, 0.636rem + 1.82vw, 2rem);
+  text-transform: capitalize;
+  line-height: 1;
+  justify-self: center;
+}
+.service__jp {
+  font-family: var(--font-primary);
+  font-weight: 300;
+  letter-spacing: 0.1em;
+  font-size: clamp(0.5rem, 0.318rem + 0.91vw, 1rem);
+  line-height: 1;
+  justify-self: center;
+  color: var(--color-primary);
+}
+
+.plan__content {
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  align-self: center;
+  justify-self: center;
+  gap: clamp(2rem, 1.273rem + 3.64vw, 4rem) clamp(0rem, -0.727rem + 3.64vw, 2rem);
+}
 .plan__header {
   grid-column: 1/-1;
   margin-top: 120px;
@@ -782,16 +822,6 @@ main {
   grid-template-columns: 1fr;
   grid-template-rows: auto 1fr;
   gap: 1rem;
-}
-.plan__content {
-  grid-column: 2;
-  width: 100%;
-  margin-top: clamp(4rem, 1.091rem + 14.55vw, 12rem);
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  align-self: center;
-  justify-self: center;
-  gap: clamp(1.2rem, 0.727rem + 2.36vw, 2.5rem) clamp(0rem, -0.727rem + 3.64vw, 2rem);
 }
 .plan__container {
   height: clamp(18rem, -5.821rem + 47.76vw, 30rem);
@@ -857,7 +887,7 @@ main {
 }
 .plan__price {
   font-family: var(--font-primary);
-  font-size: 1.8rem;
+  font-size: clamp(1rem, 0.709rem + 1.45vw, 1.8rem);
   font-weight: 600;
   letter-spacing: 0.1em;
   color: var(--color-primary);
@@ -875,10 +905,15 @@ main {
 }
 .plan__point > li {
   font-family: var(--font-primary);
-  font-size: clamp(0.9rem, 0.755rem + 0.73vw, 1.3rem);
+  font-size: clamp(0.7rem, 0.482rem + 1.09vw, 1.3rem);
   font-weight: 600;
   letter-spacing: 0.1em;
   color: var(--color-primary);
+}
+.plan__point > li > span {
+  font-size: clamp(0.7rem, 0.591rem + 0.55vw, 1rem);
+  font-weight: 300;
+  padding-right: clamp(1rem, 0.709rem + 1.45vw, 1.8rem);
 }
 .plan__common {
   grid-column: 1/3;
@@ -934,9 +969,6 @@ main {
   color: #fff;
 }
 
-.process {
-  grid-column: 2;
-}
 .process__container {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
@@ -969,8 +1001,45 @@ main {
   color: var(--color-primary);
 }
 
-.policy {
-  grid-column: 2;
+.policy__container {
+  margin-top: 2rem;
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: clamp(2rem, 1.273rem + 3.64vw, 4rem);
+}
+.policy__inner {
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: clamp(0.5rem, 0.318rem + 0.91vw, 1rem);
+  justify-self: start;
+}
+.policy__discription {
+  font-family: var(--font-primary);
+  font-size: clamp(0.813rem, 0.79rem + 0.11vw, 0.875rem);
+  letter-spacing: 0.1em;
+  line-height: 1.6;
+  color: var(--color-primary);
+}
+.policy__table {
+  width: clamp(18.75rem, 14.205rem + 22.73vw, 31.25rem);
+  text-align: center;
+  border-collapse: collapse;
+}
+.policy__table th,
+.policy__table td {
+  width: 50%;
+  border: 1px solid var(--color-primary);
+  font-family: var(--font-primary);
+  font-size: clamp(0.813rem, 0.79rem + 0.11vw, 0.875rem);
+  letter-spacing: 0.1em;
+  line-height: 2;
+}
+.policy__table th {
+  background-color: var(--color-primary);
+  color: #fff;
+}
+.policy__table td {
+  color: var(--color-primary);
 }
 
 /* ------- header ------- */
