--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -79,6 +79,7 @@ main {
 }
 
 .button {
+  display: block;
   width: 100%;
   height: 3.5rem;
   font-family: var(--font-title-en);
@@ -92,6 +93,7 @@ main {
   background-color: #fff;
   cursor: pointer;
   position: relative;
+  line-height: 3.5rem;
 }
 .button::after {
   content: ">";
@@ -102,6 +104,7 @@ main {
 }
 
 .button-color {
+  display: block;
   width: 100%;
   height: 3.5rem;
   font-family: var(--font-title-en);
@@ -114,6 +117,7 @@ main {
   color: #fff;
   background-color: rgba(168, 129, 91, 0.7);
   cursor: pointer;
+  line-height: 3.5rem;
 }
 
 .section-header {
@@ -560,10 +564,19 @@ main {
   font-size: clamp(0.8rem, 0.364rem + 2.18vw, 2rem);
   letter-spacing: 0.1em;
   text-transform: capitalize;
+  color: var(--color-primary);
 }
 .works-card img {
   width: 100%;
   height: auto;
+  aspect-ratio: 1/1;
+  object-fit: cover;
+  object-position: center;
+  opacity: 0.4;
+  transition: opacity 0.5s ease;
+}
+.works-card:hover img {
+  opacity: 1;
 }
 
 .plan-contact {
