--- a/scss/_common.scss
+++ b/scss/_common.scss
@@ -70,6 +70,7 @@ main {
 }
 
 .button {
+  display: block;
   width: 100%;
   height: 3.5rem;
   font-family: var(--font-title-en);
@@ -83,6 +84,7 @@ main {
   background-color: #fff;
   cursor: pointer;
   position: relative;
+  line-height: 3.5rem;
 
   &::after {
     content: '>';
@@ -94,6 +96,7 @@ main {
 }
 
 .button-color {
+  display: block;
   width: 100%;
   height: 3.5rem;
   font-family: var(--font-title-en);
@@ -106,6 +109,7 @@ main {
   color: #fff;
   background-color: rgba(168, 129, 91, 0.7);
   cursor: pointer;
+  line-height: 3.5rem;
 }
 
 .section-header {
