--- a/scss/pages/_index.scss
+++ b/scss/pages/_index.scss
@@ -1,5 +1,7 @@
 @forward './header';
 @forward './front-page';
+@forward './single';
+@forward './archive';
 @forward './page-about';
 @forward './page-portfolio';
 @forward './page-plan';
