--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -412,10 +412,9 @@ main {
   }
 }
 .news__article-card {
-  list-style: none;
-  text-align: center;
-  display: flex;
-  flex-direction: column;
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 1rem;
 }
 .news__article-card img {
   margin-bottom: 1rem;
@@ -425,6 +424,13 @@ main {
 .news__article-card h2 {
   font-family: var(--text-primary);
   font-size: 0.875rem;
+  letter-spacing: 0.1em;
+  font-weight: 300;
+  text-align: start;
+}
+.news__article-card span {
+  font-family: var(--text-primary);
+  font-size: 0.6rem;
   letter-spacing: 0.1em;
   font-weight: 300;
   text-align: start;
@@ -585,35 +591,98 @@ main {
   row-gap: clamp(6.25rem, 3.977rem + 11.36vw, 12.5rem);
 }
 
-.plan {
+.frontpage-plan {
   display: grid;
   grid-template-columns: 1fr;
   align-self: center;
   row-gap: clamp(1rem, 0.273rem + 3.64vw, 3rem);
 }
-.plan__desc {
+.frontpage-plan__desc {
   justify-self: center;
   align-self: center;
 }
-.plan__button {
+.frontpage-plan__button {
   grid-row: 3;
   justify-self: center;
   width: clamp(12.5rem, 3.409rem + 45.45vw, 37.5rem);
 }
 
-.contact {
+.frontpage-contact {
   display: grid;
   grid-template-columns: 1fr;
   row-gap: clamp(0.5rem, 0.245rem + 1.27vw, 1.2rem);
   align-self: center;
 }
-.contact__text {
+.frontpage-contact__text {
   justify-self: center;
   align-self: center;
 }
-.contact__button {
+.frontpage-contact__button {
   justify-self: center;
   width: clamp(12.5rem, 3.409rem + 45.45vw, 37.5rem);
+}
+
+.post {
+  grid-column: 2;
+  width: 100%;
+  margin-top: 120px;
+}
+.post__heading {
+  letter-spacing: 0.1em;
+  font-size: clamp(1rem, 0.6364rem + 1.8182vw, 2rem);
+}
+.post__content {
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: clamp(1rem, 0.818rem + 0.909vw, 1.5rem);
+}
+.post__content > time {
+  font-family: var(--font-primary);
+  color: var(--color-primary);
+  letter-spacing: 0.1em;
+}
+.post__news {
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: clamp(1rem, 0.818rem + 0.909vw, 1.5rem);
+}
+
+.prev-next {
+  margin-top: clamp(6.25rem, 3.977rem + 11.364vw, 12.5rem);
+  display: flex;
+  justify-content: space-between;
+}
+.prev-next a {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+}
+.prev-next__item svg {
+  height: 1rem;
+  width: auto;
+}
+
+.archive-news {
+  grid-column: 1/-1;
+  width: 100%;
+  margin-top: 120px;
+  display: grid;
+  grid-template-columns: minmax(2rem, 1fr) minmax(auto, 980px) minmax(2rem, 1fr);
+  align-self: center;
+  justify-self: center;
+  padding-bottom: clamp(3rem, -7.195rem + 42.93vw, 25rem);
+}
+.archive-news__header {
+  grid-column: 1/-1;
+}
+.archive-news__container {
+  grid-column: 2;
+  padding-top: clamp(3rem, 1.545rem + 7.27vw, 7rem);
+}
+.archive-news__article {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 1rem;
 }
 
 .page-about {
