--- a/scss/pages/_front-page.scss
+++ b/scss/pages/_front-page.scss
@@ -6,13 +6,16 @@
   height: auto;
 
   @include mq {
-    margin-top: 80px;
+    margin-top: 40px;
   }
 }
 
 .main-content {
   grid-column: 2;
   grid-row: 2;
+  display: grid;
+  grid-template-columns: 1fr;
+  row-gap: clamp(6.25rem, -6.064rem + 24.75vw, 12.5rem);
 }
 
 .news {
@@ -23,43 +26,54 @@
   &__title {
     grid-row: 1;
   }
+
   &__article {
     grid-row: 2;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 20px;
 
+    &-card {
+      display: grid;
+      grid-template-columns: 1fr;
+      gap: 1rem;
+
+      img {
+        margin-bottom: 1rem;
+        width: 100%;
+        height: auto;
+      }
+
+      h2 {
+        font-family: var(--text-primary);
+        font-size: 0.875rem;
+        letter-spacing: 0.1em;
+        font-weight: 300;
+        text-align: start;
+      }
+
+      span {
+        font-family: var(--text-primary);
+        font-size: 0.6rem;
+        letter-spacing: 0.1em;
+        font-weight: 300;
+        text-align: start;
+      }
+    }
+
     @include mq {
       grid-template-columns: 1fr;
-      row-gap: 20px;
-    }
-  }
+      row-gap: 32px;
 
-  &__article-card {
-    display: grid;
-    grid-template-columns: 1fr;
-    gap: 1rem;
+      img {
+        margin-bottom: 0.2rem;
+        aspect-ratio: 4 / 3;
+        object-fit: contain;
+      }
 
-    img {
-      margin-bottom: 1rem;
-      width: 100%;
-      height: auto;
-    }
-
-    h2 {
-      font-family: var(--text-primary);
-      font-size: 0.875rem;
-      letter-spacing: 0.1em;
-      font-weight: 300;
-      text-align: start;
-    }
-
-    span {
-      font-family: var(--text-primary);
-      font-size: 0.6rem;
-      letter-spacing: 0.1em;
-      font-weight: 300;
-      text-align: start;
+      h2 {
+        text-align: center;
+      }
     }
   }
 
@@ -177,6 +191,7 @@
     grid-column: 3;
     grid-row: 2;
   }
+
   @include mq {
     &__container {
       grid-template-columns: repeat(2, auto);
@@ -222,7 +237,7 @@
     transform: translate(-50%, -50%);
     font-family: var(--font-title-en);
     font-weight: 300;
-    font-size: clamp(0.8rem, 0.364rem + 2.18vw, 2rem);
+    font-size: clamp(1.2rem, 0.909rem + 1.45vw, 2rem);
     letter-spacing: 0.1em;
     text-transform: capitalize;
     color: var(--color-primary);
