--- a/scss/pages/_header.scss
+++ b/scss/pages/_header.scss
@@ -218,6 +218,11 @@
 @include mq {
   .site-header {
     height: 80px;
+    grid-template-columns: 1rem auto 1.5rem;
+
+    &__container {
+      max-width: 95%;
+    }
   }
   .site-nav {
     width: 100%;
